About section completed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </header>
 
-    <div class="home">
+    <section class="home">
 
         <div class="container">
 
@@ -46,7 +46,36 @@
             </div>
         </div>
 
-    </div>
+
+    </section>
+
+    <section class="about">
+
+        <div class="container">
+
+            <div class="content-left">
+                <div class="img-container">
+                    <img src="images/about-img.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="content-right">
+                <h1>About <span>Me</span></h1>
+                <h3>Adv. Vivek Joshi</h3>
+
+                <ul>
+                    <li><b>National & State Awardee</b></li>
+                    <li><b>President - </b>Madhav Sewa Society</li>
+                    <li><b>President - </b>SAFI NORTH INDIA</li>
+                    <li><b>Member State Advisory Board - </b> <br> Divyangjan, Disability Activist</li>
+                    <li><b>Member Kick Drugs (Aus)</b></li>
+                    <li><b>Motivational Speaker</b></li>
+                </ul>
+            </div>
+
+        </div>
+
+    </section>
 
 </body>
 </html>
