social icons and achievements section created

--- a/index.html
+++ b/index.html
@@ -1,81 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vivek Joshi</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    /></head
+  >e
+  <body>
     <header>
-        
-        <nav>
-        <input type="checkbox" id="check">
+      <nav>
+        <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
+          <i class="fas fa-bars"></i>
         </label>
         <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#achievements">Achievements</a></li>
-            <li><a href="#social-contributions">Social Contributions</a></li>
-            <li><a href="#contact">Contact</a></li>
+          <li><a class="active" href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#achievements">Achievements</a></li>
+          <li><a href="#social-contributions">Social Contributions</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
-        </nav>
-
+      </nav>
     </header>
 
     <section class="home">
-
-        <div class="container">
-
-            <div class="content-left">
-
-                <h3>Hello, I'm</h3>
-                <h1>National Awardee <br> Vivek Joshi</h1>
-                <button>My CV</button>
-            </div>
-            <div class="content-right">
-                <div class="img-container">
-
-                    <img src="images/hero.png" alt="Vivek Joshi">
-
-                </div>
-            </div>
+      <div class="container">
+        <div class="content-left">
+          <h3>Hello, I'm</h3>
+          <h1>
+            National Awardee <br />
+            Vivek Joshi
+          </h1>
+          <button>My CV</button>
         </div>
-
-
+        <div class="content-right">
+          <div class="img-container">
+            <img src="images/hero.png" alt="Vivek Joshi" />
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="about">
-
-        <div class="container">
-
-            <div class="content-left">
-                <div class="img-container">
-                    <img src="images/about-img.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="content-right">
-                <h1>About <span>Me</span></h1>
-                <h3>Adv. Vivek Joshi</h3>
-
-                <ul>
-                    <li><b>National & State Awardee</b></li>
-                    <li><b>President - </b>Madhav Sewa Society</li>
-                    <li><b>President - </b>SAFI NORTH INDIA</li>
-                    <li><b>Member State Advisory Board - </b> <br> Divyangjan, Disability Activist</li>
-                    <li><b>Member Kick Drugs (Aus)</b></li>
-                    <li><b>Motivational Speaker</b></li>
-                </ul>
-            </div>
-
+      <div class="container">
+        <div class="content-left">
+          <div class="img-container">
+            <img src="images/about-img.jpg" alt="" />
+          </div>
         </div>
 
+        <div class="content-right">
+          <h1>About <span>Me</span></h1>
+          <h3>Adv. Vivek Joshi</h3>
+
+          <ul>
+            <li><b>National & State Awardee</b></li>
+            <li><b>President - </b>Madhav Sewa Society</li>
+            <li><b>President - </b>SAFI NORTH INDIA</li>
+            <li>
+              <b>Member State Advisory Board - </b> <br />
+              Divyangjan, Disability Activist
+            </li>
+            <li><b>Member Kick Drugs (Aus)</b></li>
+            <li><b>Motivational Speaker</b></li>
+          </ul>
+        </div>
+      </div>
     </section>
 
-</body>
+    <section class="social-links">
+      <div class="container">
+        <div class="social youtube">
+          <img src="images/yt.png" alt="" />
+          <h2>YOUTUBE</h2>
+        </div>
+
+        <div class="social instagram">
+          <img src="images/ig.png" alt="" />
+          <h2>INSTAGRAM</h2>
+        </div>
+
+        <div class="social fb">
+          <img src="images/fb.png" alt="" />
+          <h2>FACEBOOK</h2>
+        </div>
+
+        <div class="social linkedin`">
+          <img src="images/ld.png" alt="" />
+          <h2>LINKEDIN</h2>
+        </div>
+      </div>
+    </section>
+
+    <section class="achievements">
+      <div class="container">
+        <div class="container-top">
+          <h1>My <span>Achievements</span></h1>
+        </div>
+
+        <div class="container-bottom">
+          <div class="card">
+            <div class="img-container">
+              <img src="images/pranab.png" alt="" />
+            </div>
+            <h1>NATIONAL AWARD</h1>
+            <p>
+              National award for the empowerment of persons with disabilities
+              (Divyangjan) on 03-Dec-2016 by Shri Pranab Mukherjee(President of
+              India).
+            </p>
+          </div>
+
+          <div class="card">
+            <div class="img-container">
+              <img src="images/apj.png" alt="" />
+            </div>
+            <h1>LAFZ LAFZ MASOOM</h1>
+            <p>
+              My first book entitled LAFZ LAFZ MASOOM was released by DR. ABDUL
+              KALAM EX. President of INDIA at 1st International Conference of
+              IACP HYDERABAD.
+            </p>
+          </div>
+
+          <div class="card">
+            <div class="img-container">
+              <img src="images/mother.jpg" alt="" />
+            </div>
+            <h1>ICONIC MOTHER AWARD</h1>
+            <p>
+              My mother was adorned with ICONIC MOTHER National Award for senior
+              citizen Vayoshreshtha Samman on 9-Oct-2017 by Shri Ramnath Kovind
+              (President of India) for making his son capable.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
