--- a/index.html
+++ b/index.html
@@ -72,30 +72,6 @@
       </div>
     </section>
 
-    <section class="social-links">
-      <div class="container">
-        <div class="social youtube">
-          <img src="images/yt.png" alt="" />
-          <h2>YOUTUBE</h2>
-        </div>
-
-        <div class="social instagram">
-          <img src="images/ig.png" alt="" />
-          <h2>INSTAGRAM</h2>
-        </div>
-
-        <div class="social fb">
-          <img src="images/fb.png" alt="" />
-          <h2>FACEBOOK</h2>
-        </div>
-
-        <div class="social linkedin`">
-          <img src="images/ld.png" alt="" />
-          <h2>LINKEDIN</h2>
-        </div>
-      </div>
-    </section>
-
     <section class="achievements">
       <div class="container">
         <div class="container-top">
@@ -138,6 +114,99 @@
               (President of India) for making his son capable.
             </p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="social-links">
+      <div class="container">
+        <div class="social youtube">
+          <img src="images/yt.png" alt="" />
+          <h2>YOUTUBE</h2>
+        </div>
+
+        <div class="social instagram">
+          <img src="images/ig.png" alt="" />
+          <h2>INSTAGRAM</h2>
+        </div>
+
+        <div class="social fb">
+          <img src="images/fb.png" alt="" />
+          <h2>FACEBOOK</h2>
+        </div>
+
+        <div class="social linkedin`">
+          <img src="images/ld.png" alt="" />
+          <h2>LINKEDIN</h2>
+        </div>
+      </div>
+    </section>
+
+    <section class="social-contributions">
+      <div class="container">
+        <div class="container-top">
+          <h1>
+            Social Contributions <span>and Activities towards Society</span>
+          </h1>
+        </div>
+        <div class="container-bottom">
+          <div class="card">
+            <div class="img-container">
+              <p>Click here to know more</p>
+              <img src="images/madhav.jpg" alt="" />
+            </div>
+            <h1>MADHAV SEWA SOCIETY</h1>
+          </div>
+
+          <div class="card">
+            <div class="img-container">
+              <p>Click here to know more</p>
+              <img src="images/kickDrugs.jpg" alt="" />
+            </div>
+            <h1>KICK DRUGS</h1>
+          </div>
+
+          <div class="card">
+            <div class="img-container">
+              <p>Click here to know more</p>
+              <img src="images/disable.jpg" alt="" />
+            </div>
+            <h1>DISABILITY ACTIVIST</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact" id="contact">
+      <div class="container">
+        <div class="container-top">
+          <h1>Contact <span>Me</span></h1>
+        </div>
+        <div class="container-bottom">
+          <form action="https://api.web3forms.com/submit" method="POST">
+            <input
+              type="hidden"
+              name="access_key"
+              value="777f8150-d9e8-4c2c-9a14-a623ff9f2020"
+            />
+            <input
+              type="text"
+              name="First Name"
+              placeholder="First Name"
+              required
+            />
+            <input type="text" name="Last Name" placeholder="Last Name" />
+            <input type="email" name="Email" placeholder="Email" required />
+            <input
+              type="tel"
+              name="Phone Number"
+              placeholder="Phone Number"
+              required
+            />
+            <!-- <input type="text" placeholder="Your Message"> -->
+            <textarea name="Message" placeholder="Your Message"></textarea>
+            <button type="submit">Send Message</button>
+          </form>
         </div>
       </div>
     </section>
